--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app-basic-functionalieties', ':app-basic-func', ':app-basic', ':rest-api', ':myapplication', ':rest-retrofit', 'app-game'
+include ':app-basic-functionalieties', ':app-basic-func', ':app-basic', ':rest-api', ':myapplication', ':rest-retrofit', ':app-sqllite', ':app-enum', 'app-game'
 rootProject.name='emptyproject'
