--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
-
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
     defaultConfig {
         applicationId "com.example.rest_api"
         minSdkVersion 15
@@ -13,6 +16,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildscript {
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
     }
 
     buildTypes {
@@ -25,6 +34,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.AnyChart:AnyChart-Android:0.0.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
