--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -1,19 +1,23 @@
 apply plugin: 'com.android.application'
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
 android {
 
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
-    repositories {
-        maven { url "https://jitpack.io" }
-    }
     defaultConfig {
         applicationId "com.example.rest_api"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,8 +38,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.AnyChart:AnyChart-Android:0.0.3'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.android.support:multidex:1.0.3'
+
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
