--- a/rest-api/src/main/AndroidManifest.xml
+++ b/rest-api/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/AppTheme">
         <activity android:name=".SecondActivity"></activity>
         <activity android:name=".ConverterActivity"></activity>
+        <activity android:name=".ChartActivity">
+<!--            <intent-filter>-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
 
 
         <activity android:name=".MainActivity">
