--- a/rest-api/src/main/AndroidManifest.xml
+++ b/rest-api/src/main/AndroidManifest.xml
@@ -10,14 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".RatesActivity"></activity>
         <activity android:name=".ConverterActivity"></activity>
         <activity android:name=".ChartActivity">
-<!--            <intent-filter>-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
 
+        </activity>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -26,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
